# libmagic-riir

./: Cargo.toml  README.md
c-abi/: Cargo.toml  README.md
c-abi/src/: lib.rs
